--- a/DigitalSignatureWebUI/Shared/SurveyPrompt.razor
+++ b/DigitalSignatureWebUI/Shared/SurveyPrompt.razor
@@ -4,7 +4,7 @@
 
     <span class="text-nowrap">
         Visit
-        <a target="_blank" class="font-weight-bold link-dark" href="https://github.com/Andrea-Bruno/">the project documentation</a>
+        <a target="_blank" class="font-weight-bold link-dark" href="https://github.com/Andrea-Bruno/StandardDigitalSignature">the project documentation</a>
     </span>
 </div>
 
