--- a/DigitalSignatureWebUI/Shared/MainLayout.razor
+++ b/DigitalSignatureWebUI/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://github.com/Andrea-Bruno/StandardDigitalSignature/issues" target="_blank">Help and support</a>
         </div>
 
         <article class="content px-4">
