--- a/DigitalSignatureWebUI/Shared/MainLayout.razor
+++ b/DigitalSignatureWebUI/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<PageTitle>DigitalSignatureWebUI</PageTitle>
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
