--- a/DigitalSignatureWebUI/Shared/NavMenu.razor
+++ b/DigitalSignatureWebUI/Shared/NavMenu.razor
@@ -11,15 +11,16 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="signature">
-                <span class="oi oi-document" aria-hidden="true"></span> Signature
+                <span class="oi oi-document" aria-hidden="true"></span> Digital sign
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="signaturevalidation">
-                <span class="oi oi-check" aria-hidden="true"></span> Validation
+                <span class="oi oi-check" aria-hidden="true"></span> Sign validator
             </NavLink>
         </div>
+
     </nav>
 </div>
 
