--- a/DigitalSignatureWebUI/Shared/SurveyPrompt.razor
+++ b/DigitalSignatureWebUI/Shared/SurveyPrompt.razor
@@ -3,9 +3,10 @@
     <strong>@Title</strong>
 
     <span class="text-nowrap">
-        Visit
-        <a target="_blank" class="font-weight-bold link-dark" href="https://github.com/Andrea-Bruno/StandardDigitalSignature">the project documentation</a>
+        Please take our
+        <a target="_blank" class="font-weight-bold link-dark" href="https://go.microsoft.com/fwlink/?linkid=2149017">brief survey</a>
     </span>
+    and tell us what you think.
 </div>
 
 @code {
